--- a/05_Evaluation.ipynb
+++ b/05_Evaluation.ipynb
@@ -7,8 +7,21 @@
    "outputs": [],
    "source": [
     "import socket\n",
-    "from pymodbus.client import ModbusTcpClient\n",
+    "import logging\n",
+    "import time\n",
     "\n",
+    "# Configure logging\n",
+    "logging.basicConfig(filename='modbuslog.log', filemode='w', level=logging.DEBUG,\n",
+    "                    format='%(asctime)s:%(levelname)s:%(message)s')\n",
+    "\n",
+    "# Define the file path\n",
+    "FILE_PATH = 'packets(epoch20_20k_1).txt'\n",
+    "\n",
+    "# TCP connection details\n",
+    "HOST = 'localhost'\n",
+    "PORT = 502\n",
+    "\n",
+    "# Function to read packets from file\n",
     "def read_packets_from_file(file_path):\n",
     "    packets = []\n",
     "    with open(file_path, 'r') as file:\n",
@@ -18,77 +31,113 @@
     "            packets.append(packet)\n",
     "    return packets\n",
     "\n",
-    "def send_modbus_packet(packet, client):\n",
+    "# Function to send a packet and receive a response\n",
+    "def send_packet(packet):\n",
     "    try:\n",
-    "        # Send the packet using the client's socket\n",
-    "        client.socket.sendall(packet)\n",
+    "        # Create socket and connect to server\n",
+    "        sock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
+    "        sock.settimeout(5)  # Set a timeout for the socket\n",
+    "        sock.connect((HOST, PORT))\n",
+    "\n",
+    "        # Send data\n",
+    "        start_time = time.time()\n",
+    "        logging.debug(f\"SEND: {format_bytes_as_hex(packet)}\")\n",
+    "        sock.sendall(packet)\n",
+    "        print(f\"Packet: {format_bytes_as_hex(packet)}\")\n",
+    "\n",
     "\n",
     "        # Receive response\n",
-    "        response = client.socket.recv(1024)\n",
-    "        \n",
-    "        # Check the response length\n",
+    "        response = sock.recv(1024)\n",
+    "        print(f\"Response: {format_bytes_as_hex(response)}\")\n",
+    "\n",
+    "        logging.debug(f\"RECV: {format_bytes_as_hex(response)}\")\n",
+    "        end_time = time.time()\n",
+    "        sock.close()\n",
+    "\n",
+    "        # Check for overtime return\n",
+    "        if (end_time - start_time) > 10:  # If it took longer than 10 seconds to get a response\n",
+    "            logging.error(f\"Overtime return for packet: {packet}\")\n",
+    "            return False, \"overtime_return\"\n",
     "        if len(response) < 8:\n",
+    "            logger.debug(\"Response too short\")\n",
     "            return \"Exception code: Response too short\", response\n",
     "        \n",
     "        # Check the eighth byte for the exception code\n",
     "        function_code = packet[7]  # The original function code sent\n",
     "        exception_code = function_code + 0x80\n",
     "        \n",
-    "        \n",
     "        if response[7] == exception_code:\n",
-    "            return f\"Exception code: {exception_code}\", response\n",
+    "            logging.error(f\"Exception message received for packet: {packet}\")\n",
+    "            logger.debug(f\"Exception code: {exception_code}\")\n",
+    "            return False, response\n",
+    "\n",
     "        else:\n",
-    "            return \"Normal response\", response\n",
+    "            return True, None   # Normal response\n",
+    "    except socket.timeout:\n",
+    "        logging.error(f\"Socket timeout for packet: {packet}\")\n",
+    "        return False, \"timeout\"\n",
+    "    except socket.error as e:\n",
+    "        logging.error(f\"Socket error: {e} for packet: {packet}\")\n",
+    "        return False, \"socket_error\"\n",
     "    except Exception as e:\n",
-    "        return f\"Error: {e}\", None\n",
+    "        logging.error(f\"Exception: {e} for packet: {packet}\")\n",
+    "        return False, \"general_exception\"\n",
     "\n",
     "def format_bytes_as_hex(byte_sequence):\n",
     "    return ' '.join([f'0x{byte:02x}' for byte in byte_sequence])\n",
     "\n",
-    "def main():\n",
-    "    # Modbus TCP server details\n",
-    "    server_ip = '127.0.0.1'\n",
-    "    server_port = 502\n",
-    "    \n",
-    "    # Create Modbus TCP client\n",
-    "    client = ModbusTcpClient(server_ip, port=server_port)\n",
-    "    \n",
-    "    if not client.connect():\n",
-    "        print(\"Unable to connect to the Modbus TCP server.\")\n",
-    "        return\n",
-    "    \n",
-    "    # Read packets from text file\n",
-    "    packets = read_packets_from_file('packets(epoch20).txt')\n",
-    "    total_packets = len(packets)\n",
-    "    normal_response_count = 0\n",
+    "def detect_crash():\n",
+    "    try:\n",
+    "        # Attempt to connect to the server to check if it's up\n",
+    "        sock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
+    "        sock.connect((HOST, PORT))\n",
+    "        sock.close()\n",
+    "        return False  # No crash detected\n",
+    "    except Exception as e:\n",
+    "        logging.error(f\"Crash detected: {e}\")\n",
+    "        return True   # Crash detected\n",
     "\n",
-    "    # Send each packet and print the result\n",
-    "    for packet in packets:\n",
-    "        result, response = send_modbus_packet(packet, client)\n",
-    "        packet_hex = format_bytes_as_hex(packet)\n",
-    "        if response:\n",
-    "            \n",
-    "            response_hex = format_bytes_as_hex(response)\n",
-    "            response_8th_byte_hex = f'0x{response[7]:02x}'\n",
-    "        else:\n",
-    "            response_hex = 'No response'\n",
-    "            response_8th_byte_hex = 'N/A'\n",
-    "        \n",
-    "        if result == \"Normal response\":\n",
-    "            normal_response_count += 1\n",
-    "        print(f\"Packet: {packet_hex}\\nResponse: {response_hex}\\n8th_byte_response: {response_8th_byte_hex}\\nResult: {result}\\n\")\n",
-    "    \n",
-    "    test_case_reception_rate = normal_response_count / total_packets\n",
-    "    print(normal_response_count)\n",
-    "    print(total_packets)\n",
-    "    \n",
-    "    \n",
-    "    print(f\"Test System Reception Rate (TSRR): {test_case_reception_rate * 100:.2f}%\")\n",
-    "    # Close the client connection\n",
-    "    client.close()\n",
+    "# Read packets from file\n",
+    "packets = read_packets_from_file(FILE_PATH)\n",
     "\n",
-    "if __name__ == '__main__':\n",
-    "    main()\n"
+    "# Total number of packets\n",
+    "total_packets = len(packets)\n",
+    "\n",
+    "# Count recognized normal packets (N_legal) and abnormal packets (N_unusual)\n",
+    "normal_responses = 0\n",
+    "abnormal_responses = 0\n",
+    "crashes_detected = {\n",
+    "    \"timeout\": 0,\n",
+    "    \"socket_error\": 0,\n",
+    "    \"overtime_return\": 0,\n",
+    "    \"exception_message\": 0,\n",
+    "    \"general_exception\": 0,\n",
+    "    \"server_crash\": 0\n",
+    "}\n",
+    "\n",
+    "for packet in packets:\n",
+    "    success, error_type = send_packet(packet)\n",
+    "    if success:\n",
+    "        normal_responses += 1\n",
+    "    else:\n",
+    "        abnormal_responses += 1\n",
+    "        if error_type:\n",
+    "            crashes_detected[error_type] += 1\n",
+    "        if detect_crash():\n",
+    "            crashes_detected[\"server_crash\"] += 1\n",
+    "\n",
+    "# Calculate TSRR (Test System Reception Rate)\n",
+    "tsrr = normal_responses / total_packets if total_packets > 0 else 0\n",
+    "\n",
+    "# Calculate TSAR (Test System Abnormal Rate)\n",
+    "total_crashes = sum(crashes_detected.values())\n",
+    "tsar = total_crashes/ total_packets if total_packets > 0 else 0\n",
+    "\n",
+    "print(f\"Test System Reception Rate (TSRR): {tsrr * 100:.2f}%\")\n",
+    "print(f\"Test System Abnormal Rate (TSAR): {tsar * 100:.2f}%\")\n",
+    "print(f\"Number of crashes detected: {total_crashes}\")\n",
+    "print(f\"Details of crashes detected: {crashes_detected}\")\n",
+    "\n"
    ]
   }
  ],
