--- a/01_preprocessing.ipynb
+++ b/01_preprocessing.ipynb
@@ -9,8 +9,8 @@
     "import numpy as np\n",
     " \n",
     "new_txt = []\n",
-    "file_name = 'A2_cleaned.txt'\n",
-    "processed_file_name = 'A2_cleaned_processed.txt'\n",
+    "file_name = 'A2.txt'\n",
+    "processed_file_name = 'A2_processed.txt'\n",
     "with open(file_name, 'r') as ori_file:\n",
     "    with open(processed_file_name, 'w') as proced_file:\n",
     "        for i, line in enumerate(ori_file):\n",
@@ -29,9 +29,9 @@
    "source": [
     "import pandas as pd\n",
     " \n",
-    "file_name = 'A2_cleaned.txt'\n",
-    "processed_file_name = 'A2_cleaned_processed.txt'\n",
-    "csv_name = 'A2_cleaned.csv'\n",
+    "file_name = 'A2.txt'\n",
+    "processed_file_name = 'A2_processed.txt'\n",
+    "csv_name = 'A2_processed_cleaned.csv'\n",
     " \n",
     "data = []\n",
     "chunk = []\n",
@@ -56,6 +56,72 @@
     " \n",
     "df = pd.DataFrame(data)    \n",
     "df.to_csv(csv_name, index=False, header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Path to the CSV file\n",
+    "file_path = 'A2_processed_cleaned.csv'\n",
+    "\n",
+    "# Read the CSV file into a DataFrame\n",
+    "df = pd.read_csv(file_path)\n",
+    "\n",
+    "# Drop the first 54 columns (just extract the Modbus Packets)\n",
+    "df = df.iloc[:, 54:]\n",
+    "\n",
+    "# Optionally, save the modified DataFrame to a new CSV file\n",
+    "df.to_csv('A2_processed_cleaned2.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the first CSV file\n",
+    "df1 = pd.read_csv('information.csv')\n",
+    "\n",
+    "# Load the second CSV file\n",
+    "df2 = pd.read_csv('A2_processed_cleaned2.csv')\n",
+    "\n",
+    "# Concatenate the two dataframes side by side\n",
+    "combined_df = pd.concat([df1, df2], axis=1)\n",
+    "\n",
+    "# Save the combined dataframe to a new CSV file\n",
+    "combined_df.to_csv('A2_processed_cleaned2_combined.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read the CSV file into a DataFrame\n",
+    "df = pd.read_csv('A2_processed_cleaned2_combined.csv')\n",
+    "\n",
+    "# Specify the column name\n",
+    "column_name = 'Info'  # Replace with the actual column name\n",
+    "\n",
+    "# Filter the DataFrame to keep only rows containing \"Query\"\n",
+    "filtered_df = df[df[column_name].str.contains('Query', case=False, na=False)]\n",
+    "\n",
+    "# Save the filtered DataFrame to a new CSV file\n",
+    "filtered_df.to_csv('A2_processed_cleaned2_combined_filtered_file_final(Query).csv', index=False)\n",
+    "\n",
+    "# Optionally, print the filtered DataFrame to verify the results\n",
+    "#print(filtered_df)"
    ]
   },
   {
@@ -133,6 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# padding\n",
     "import csv\n",
     "\n",
     "def pad_csv_rows(input_file, output_file):\n",
@@ -153,8 +220,8 @@
     "        writer.writerows(padded_rows)\n",
     "\n",
     "# Example usage\n",
-    "input_file = 'input.csv'\n",
-    "output_file = 'output.csv'\n",
+    "input_file = 'A2_processed_cleaned2_combined_filtered_file_final(Query).csv'\n",
+    "output_file = 'A2_processed_cleaned2_combined_filtered_file_padded_final(Query).csv'\n",
     "pad_csv_rows(input_file, output_file)\n"
    ]
   },
@@ -164,15 +231,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# convert hexadecimal to decimal\n",
     "import pandas as pd\n",
     "\n",
     "def hex_to_decimal(hex_str):\n",
     "    \n",
     "    return int(hex_str, 16)\n",
     "\n",
-    "# Specify the input and output CSV file names\n",
-    "input_csv_name = 'hex_data2_processed.csv'  # Update this to your input file name\n",
-    "output_csv_name = 'converted_decimal.csv'  # Update this to your desired output file name\n",
+    "\n",
+    "input_csv_name = 'A2_processed_cleaned2_combined_filtered_file_padded_final(Query).csv'  \n",
+    "output_csv_name = 'data_final.csv'  \n",
     "\n",
     "# Read the input CSV file\n",
     "df = pd.read_csv(input_csv_name)\n",
