--- a/02_Transformer_Model.ipynb
+++ b/02_Transformer_Model.ipynb
@@ -1246,7 +1246,7 @@
         "    generated_packet = generate_modbus_tcp_packet(model, packet_start, seq_len, device)\n",
         "    generated_packets.append(generated_packet)\n",
         "\n",
-        "with open(\"/content/drive/MyDrive/transformers/packets.txt\", \"w\") as f:\n",
+        "with open(\"/content/drive/MyDrive/transformers/predicted_packets(epoch20_20k_1)\", \"w\") as f:\n",
         "    for packet in generated_packets:\n",
         "        f.write(packet + \"\\n\")\n",
         "\n"
