--- a/03_Sendingandmonitoring.ipynb
+++ b/03_Sendingandmonitoring.ipynb
@@ -14,8 +14,9 @@
     "logging.basicConfig(filename='modbuslog.log', filemode='w', level=logging.DEBUG,\n",
     "                    format='%(asctime)s:%(levelname)s:%(message)s')\n",
     "\n",
-    "# Define the file path\n",
-    "FILE_PATH = 'mutated_predicted_packets.txt'\n",
+    "# Define the file paths\n",
+    "FILE_PATH = 'predicted_packets(epoch20_20k_1).txt'\n",
+    "CRASH_LOG_PATH = 'crash_packets.txt'\n",
     "\n",
     "# TCP connection details\n",
     "HOST = 'localhost'\n",
@@ -26,10 +27,14 @@
     "    packets = []\n",
     "    with open(file_path, 'r') as file:\n",
     "        for line in file:\n",
-    "            \n",
     "            packet = bytes([int(x, 16) for x in line.split()])\n",
     "            packets.append(packet)\n",
     "    return packets\n",
+    "\n",
+    "# Function to log crash packets to a file\n",
+    "def log_crash_packet(packet, error_type):\n",
+    "    with open(CRASH_LOG_PATH, 'a') as file:\n",
+    "        file.write(f\"{format_bytes_as_hex(packet)} - {error_type}\\n\")\n",
     "\n",
     "# Function to send a packet and receive a response\n",
     "def send_packet(packet):\n",
@@ -45,7 +50,6 @@
     "        sock.sendall(packet)\n",
     "        print(f\"Packet: {format_bytes_as_hex(packet)}\")\n",
     "\n",
-    "\n",
     "        # Receive response\n",
     "        response = sock.recv(1024)\n",
     "        print(f\"Response: {format_bytes_as_hex(response)}\")\n",
@@ -57,9 +61,11 @@
     "        # Check for overtime return\n",
     "        if (end_time - start_time) > 10:  \n",
     "            logging.error(f\"Overtime return for packet: {packet}\")\n",
+    "            log_crash_packet(packet, \"overtime_return\")\n",
     "            return False, \"overtime_return\"\n",
     "        if len(response) < 8:\n",
-    "            logger.debug(\"Response too short\")\n",
+    "            logging.debug(\"Response too short\")\n",
+    "            log_crash_packet(packet, \"Response too short\")\n",
     "            return \"Exception code: Response too short\", response\n",
     "        \n",
     "        # Check the eighth byte for the exception code\n",
@@ -68,33 +74,37 @@
     "        \n",
     "        if response[7] == exception_code:\n",
     "            logging.error(f\"Exception message received for packet: {packet}\")\n",
-    "            logger.debug(f\"Exception code: {exception_code}\")\n",
+    "            logging.debug(f\"Exception code: {exception_code}\")\n",
+    "            log_crash_packet(packet, \"exception_message\")\n",
     "            return False, response\n",
     "\n",
     "        else:\n",
     "            return True, None   # Normal response\n",
     "    except socket.timeout:\n",
     "        logging.error(f\"Socket timeout for packet: {packet}\")\n",
+    "        log_crash_packet(packet, \"timeout\")\n",
     "        return False, \"timeout\"\n",
     "    except socket.error as e:\n",
     "        logging.error(f\"Socket error: {e} for packet: {packet}\")\n",
+    "        log_crash_packet(packet, \"socket_error\")\n",
     "        return False, \"socket_error\"\n",
     "    except Exception as e:\n",
     "        logging.error(f\"Exception: {e} for packet: {packet}\")\n",
+    "        log_crash_packet(packet, \"general_exception\")\n",
     "        return False, \"general_exception\"\n",
     "\n",
     "def format_bytes_as_hex(byte_sequence):\n",
     "    return ' '.join([f'0x{byte:02x}' for byte in byte_sequence])\n",
     "\n",
-    "def detect_crash():\n",
+    "def detect_crash(packet):\n",
     "    try:\n",
-    "        \n",
     "        sock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
     "        sock.connect((HOST, PORT))\n",
     "        sock.close()\n",
     "        return False  # No crash detected\n",
     "    except Exception as e:\n",
     "        logging.error(f\"Crash detected: {e}\")\n",
+    "        log_crash_packet(packet, \"server_crash\")\n",
     "        return True   # Crash detected\n",
     "\n",
     "# Read packets from file\n",
@@ -123,11 +133,20 @@
     "        abnormal_responses += 1\n",
     "        if error_type:\n",
     "            crashes_detected[error_type] += 1\n",
-    "        if detect_crash():\n",
+    "        if detect_crash(packet):\n",
     "            crashes_detected[\"server_crash\"] += 1\n",
     "\n",
+    "# Calculate TSRR (Test System Reception Rate)\n",
+    "tsrr = normal_responses / total_packets if total_packets > 0 else 0\n",
     "\n",
-    "\n"
+    "# Calculate TSAR (Test System Abnormal Rate)\n",
+    "total_crashes = sum(crashes_detected.values())\n",
+    "tsar = total_crashes / total_packets if total_packets > 0 else 0\n",
+    "\n",
+    "print(f\"Test System Reception Rate (TSRR): {tsrr * 100:.2f}%\")\n",
+    "print(f\"Test System Abnormal Rate (TSAR): {tsar * 100:.2f}%\")\n",
+    "print(f\"Number of crashes detected: {total_crashes}\")\n",
+    "print(f\"Details of crashes detected: {crashes_detected}\")\n"
    ]
   },
   {
@@ -135,7 +154,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import csv\n",
+    "\n",
+    "# File paths\n",
+    "CRASH_LOG_PATH = 'crash_packets.txt'\n",
+    "CSV_OUTPUT_PATH = 'crash_packets.csv'\n",
+    "\n",
+    "def extract_packets_from_log(file_path):\n",
+    "    packets = []\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        for line in file:\n",
+    "            # Split the line to separate the packet from the error type\n",
+    "            parts = line.strip().split(' - ')\n",
+    "            if len(parts) > 0:\n",
+    "                packet = parts[0]\n",
+    "                packets.append(packet)\n",
+    "    return packets\n",
+    "\n",
+    "def write_packets_to_csv(packets, csv_path):\n",
+    "    with open(csv_path, 'w', newline='') as csvfile:\n",
+    "        csvwriter = csv.writer(csvfile)\n",
+    "        for packet in packets:\n",
+    "            bytes_list = packet.split()\n",
+    "            csvwriter.writerow(bytes_list)\n",
+    "\n",
+    "# Extract packets from the log file\n",
+    "packets = extract_packets_from_log(CRASH_LOG_PATH)\n",
+    "\n",
+    "# Write extracted packets to a CSV file\n",
+    "write_packets_to_csv(packets, CSV_OUTPUT_PATH)\n",
+    "\n",
+    "print(f\"Packets have been extracted and written to {CSV_OUTPUT_PATH}.\")\n"
+   ]
   }
  ],
  "metadata": {
