--- a/05_Evaluation.ipynb
+++ b/05_Evaluation.ipynb
@@ -15,7 +15,7 @@
     "                    format='%(asctime)s:%(levelname)s:%(message)s')\n",
     "\n",
     "# Define the file path\n",
-    "FILE_PATH = 'packets(epoch20_20k_1).txt'\n",
+    "FILE_PATH = 'mutated_packets(epoch20_20k_1).txt'\n",
     "\n",
     "# TCP connection details\n",
     "HOST = 'localhost'\n",
